Fri Oct 17 13:22:02 1997  Stan Shebs  <shebs@andros.cygnus.com>

	* infcmd.c: Improve grammar of "set args" help.

Thu Oct 16 15:03:58 1997  Michael Meissner  <meissner@cygnus.com>

	* remote-sds.c (sds_load): Properly declare as static.

Wed Oct 15 10:27:14 1997  Doug Evans  <dje@canuck.cygnus.com>

	* config/sparc/tm-sparc.h (FIX_CALL_DUMMY): Mask off displacement
	to 30 bits in call insn to handle --enable-64-bit-bfd.
	(STORE_STRUCT_RETURN): Change to handle --enable-64-bit-bfd.

Tue Oct 14 22:13:27 1997  Dawn Perchik  <dawn@cygnus.com>

	* stabsread.c: Make ref_map entries dynamically allocated.

Thu Oct  9 12:37:57 1997  Frank Ch. Eigler  <fche@cygnus.com>

	* printcmd.c (print_address_symbolic, address_info): Mask
 	target-specific flag bits from PC, for more aesthetic disassembly.
  	* config/mips/tm-mips.h: Added PC masking for MIPS family
 	(especially the MIPS16).

Sat Oct  4 18:45:44 1997  Mark Alexander  <marka@cygnus.com>

	* remote-mips.c (mips-initialize): Work around flakiness in
	some versions of PMON after loading a program.

Fri Oct  3 15:49:18 1997  Per Bothner  <bothner@cygnus.com>

	* c-lang.h, cp-valprint.c (static_field_print):  Make non-static.
	* parse.c, parser-defs.h (length_of_subexp):  Make non-static.
	* jv-exp.y (FieldAccess):  Handle dollar-VARIABLE as primary.
	(ArrayAccess):  Likewise.  Also remove warnings.
	(CastExpression):  Implement (typename) UnaryExpression.
	(push_qualified_expression_name):  Fix small bug.
	* jv-lang.c:  Use TYPE_TAG_NAME, not TYPE_NAME for class names.
 	(_initialize_jave_language):  Fix typo (jave -> java).
	(java_language):  Java does *not* have C-style arrays.
	(java_class_from_object):  Make more general (and complicated).
	(java_link_class_type):  Fix typo "super" -> "class".  Handle arrays.
	(java_emit_char, java_printchar):  New function.
	(evaluate_subexp_java case BINOP_SUBSCRIPT):  Handle Java arrays.
	* jv-valprint.c (java_value_print):  Implement printing of Java arrays.